--- a/css/gps/gps2-1.css
+++ b/css/gps/gps2-1.css
@@ -1,3 +1,22 @@
-body {
-	color: red;
+h1 {
+  text-align: center;
+}
+
+section {
+  float: left;
+  width: 45%;
+  padding: 10px;
+}
+
+.column-1 {
+  background-color: purple;
+  border: solid black 1px; 
+}
+.column-2 {
+  background-color: limegreen;
+  margin-left: 2%;
+}
+
+footer {
+  clear: both;
 }
