--- a/web_dev/sinatra_templating/views/home.erb
+++ b/web_dev/sinatra_templating/views/home.erb
@@ -7,6 +7,8 @@
   <h1>Student Management System</h1>
   <p>Welcome to the student management system.</p>
   <p>Click <a href="students/new">here</a> to create a new student.</p>
+  <p>Click <a href="students/delete">here</a> to delete a current student.</p>
+  <p>Click <a href="students/search_student">here</a> to search a current student.</p>
   <ul>
     <% @students.each do |student| %>
       <li><%= student['name'] %>, <%= student['age'] %></li>
